# NarrativeOS

./: NarrativeOS_RAG.ipynb  README.md
client/: campaign.html  campaigns.js  index.html  login.js
client/app/: App.tsx
client/app/components/: CampaignCard.tsx  CampaignPage.tsx  Dashboard.tsx  LoginPage.tsx
client/app/contexts/: AuthContext.tsx
client/app/data/: mockData.ts
docs/: CreateScripts.sql  DBQueries.sql  RESTapi.md  model.md
docs/API/: DBQueries.sql  model.md
server/: __init__.py  main.py  pyproject.toml
server/config/: db.py  mock_data.json  seed.py
server/models/: CMModel.py  PCModel.py  __init__.py  campaignModel.py  playerCharModel.py  userModel.py
server/routes/: PCRoutes.py  authRoutes.py  campaignRoutes.py  playerCharRoutes.py  userRoutes.py
server/services/: campaignService.py  playerCharService.py  userService.py  util.py
tests/: conftest.py  user_tests.py
